--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
-.idea
+.idea/
 # C extensions
 *.so
 
@@ -127,4 +127,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+/.idea/
 /.idea/
